--- a/ClearQ/platformio.ini
+++ b/ClearQ/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	adafruit/Adafruit Thermal Printer Library@^1.4.1
 	alvarowolfx/ESP32QRCodeReader
+	bblanchon/ArduinoJson@^7.4.2
