--- a/ClearQ/platformio.ini
+++ b/ClearQ/platformio.ini
@@ -11,10 +11,11 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
 framework = arduino
 lib_deps = 
 	mobizt/FirebaseClient@^2.1.5
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
-	adafruit/Adafruit Thermal Printer Library@^1.4.1
 	alvarowolfx/ESP32QRCodeReader
 	bblanchon/ArduinoJson@^7.4.2
